# wshm-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  install.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
deploy/: README.md
deploy/helm/wshm/: .helmignore  Chart.yaml  values.yaml
deploy/helm/wshm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  job.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
deploy/k8s/: README.md  configmap.yaml  cronjob.yaml  job.yaml  secret.example.yaml
deploy/kubernetes/: deployment.yml
deploy/kustomize/base/: configmap.yaml  cronjob.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  serviceaccount.yaml
deploy/kustomize/overlays/prod/: kustomization.yaml
deploy/kustomize/overlays/prod/files/: config.prod.toml
deploy/kustomize/overlays/staging/: kustomization.yaml
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  cli-reference.md  configuration.md  daemon.md  deployment.md  getting-started.md  license.md  pro-features.md  sso-rbac.md  troubleshooting.md  vault.md
src/: cli.rs  config.rs  icm.rs  lib.rs  license.rs  login.rs  main.rs  pro_hooks.rs  retry.rs  run.rs  telemetry.rs  update.rs
src/ai/: backend.rs  client.rs  local.rs  mod.rs  schemas.rs
src/ai/prompts/: conflict_resolve.rs  inline_review.rs  issue_classify.rs  issue_fix.rs  mod.rs  pr_analyze.rs
src/auth/: mod.rs
src/daemon/: commands.rs  memory.rs  mod.rs  poller.rs  processor.rs  scheduler.rs  server.rs  systemd.rs  web.rs
src/db/: backend.rs  events.rs  issues.rs  licenses.rs  mod.rs  postgres.rs  pulls.rs  schema.rs  sync.rs  triage.rs
src/export/: mod.rs  webhook.rs
src/export/database/: elastic.rs  mod.rs  mongodb.rs  mysql.rs  opensearch.rs  postgres.rs
src/export/storage/: azure.rs  gcs.rs  mod.rs  s3.rs
src/git_provider/: azure_devops.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
src/github/: client.rs  git.rs  issues.rs  mod.rs  pulls.rs  sync.rs
src/pipelines/: autogen.rs  backup.rs  changelog.rs  conflict_resolution.rs  context.rs  dashboard.rs  improve.rs  merge_queue.rs  migrate.rs  mod.rs  notify.rs  pr_analysis.rs  pr_health.rs  report.rs  revert.rs  review.rs  status.rs  triage.rs
src/secrets/: cipher.rs  mod.rs  store.rs
src/tui/: app.rs  mod.rs  ui.rs
src/vault/: aws.rs  azure.rs  gcp.rs  hashicorp.rs  mod.rs
src/web-dist/: index.html
src/web-dist/_app/: version.json
src/web-dist/_app/immutable/assets/: 0.B7lztAqH.css  0.BBU8LSrP.css  0.BCTqXlxJ.css  0.BSiA9rjP.css  0.BWFdnnMN.css  0.BenB7Q09.css  0.C1E3anJD.css  0.CQRg4r5F.css  0.CWNPlnqO.css  0.CtGfHUuD.css  0.CubhPA3J.css  0.CvoVPjHW.css  0.DJnZYXvQ.css  0.D_0nohV3.css  0.DkYogQH0.css  0.DuqqBkrX.css  0.S-8GQZCU.css  0.TkHVOiTS.css  0.Vvtnhx1e.css  0.adqxKrrz.css  2.MnKuB1gK.css  3.CRFH2djP.css  4.BD_rVq8h.css  5.B_leRrmj.css  6.gJbUS9TM.css  7.B2XyFwtA.css  8.BFGayVPs.css
src/web-dist/_app/immutable/chunks/: -A_yt8DJ.js  -CqROYJb.js  -OxaZ_Fa.js  -xR5LUN9.js  0VvDQgR3.js  2Mn4XmNU.js  2aWL-Knx.js  33yaiIsf.js  394OarMH.js  3Lu_V4jE.js  3M3BDSg7.js  4199aq0L.js  45XCFjSL.js  490d8cLC.js  4_BLIYqt.js  5hpZZrLC.js  6xfmANYT.js  72sOQ0z1.js  7x5oyVzp.js  B-MmUBV5.js  B1rAj1ZS.js  B1vWAsHZ.js  B2PUNa9v.js  B2qnRdzm.js  B3jgCRTs.js  B3uZtT2-.js  B46hDC1k.js  B5GUI4YJ.js  B6Y2Vrpi.js  B8PEZbqX.js  BA2hjB_v.js  BAeGstfD.js  BBAyS0Zd.js  BBqlBJgg.js  BCEs2GwE.js  BDMVOw36.js  BEPFd6dY.js  BEP_fSWT.js  BEVCEGyn.js  BEgp2ZVX.js  (+310 more)
src/web-dist/_app/immutable/entry/: app.B52pKYUz.js  app.B95VarH2.js  app.BM5RRzLl.js  app.BPOtGApx.js  app.Bx4eK4bv.js  app.BzBwGzwE.js  app.C1CMbtSw.js  app.C3kzDxmg.js  app.CEGdIcT4.js  app.CF9G5UQC.js  app.CI5rd5Tn.js  app.CUObsyM7.js  app.CZpx6IFA.js  app.CjEn5K_n.js  app.CmOtAxGz.js  app.Cyfs99lB.js  app.D0YByTFY.js  app.DDt1JpSd.js  app.DIPu6ukF.js  app.DNG6V3qu.js  app.DWqITtFd.js  app.Dab_Kx-e.js  app.DgLDYuKV.js  app.DhkC0KUM.js  app.DlleAKjm.js  app.Du-uWZN8.js  app.DzIKLdOl.js  app.Gxux-Zr7.js  (+38 more)
tests/fixtures/: issue_opened.json  pr_opened.json
tests/integration/: db_test.rs
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html
web/src/lib/: ProGate.svelte  api.ts  colors.ts  filter.ts  paginate.ts  permissions.ts  sort.ts  stores.ts
web/src/lib/components/: IssueDetail.svelte  PrDetail.svelte
web/src/lib/i18n/: ar.json  de.json  en.json  es.json  fr.json  index.ts  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh.json
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/actions/: +page.svelte
web/src/routes/activity/: +page.svelte
web/src/routes/backups/: +page.svelte
web/src/routes/changelog/: +page.svelte
web/src/routes/conflicts/: +page.svelte
web/src/routes/improve/: +page.svelte
web/src/routes/issues/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/prs/: +page.svelte
web/src/routes/queue/: +page.svelte
web/src/routes/revert/: +page.svelte
web/src/routes/review/: +page.svelte
web/src/routes/search/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/summary/: +page.svelte
web/src/routes/triage/: +page.svelte
(+414 files in other folders)
