[package]
name = "wshm"
version = "0.7.0"
edition = "2021"
description = "AI-powered GitHub agent for OSS maintainers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pszymkowiak/wshm"
keywords = ["github", "ai", "triage", "automation"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
octocrab = "0.44"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
hf-hub = "0.4"
indicatif = "0.17"
dirs = "6.0.0"
regex = "1.12.3"
axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
flate2 = "1"
tar = "0.4"
zip = "2"
