[package]
name = "wshm"
version = "0.23.1"
edition = "2021"
description = "AI-powered GitHub agent for OSS maintainers"
license = "LicenseRef-WSHM-Source-Available"
readme = "README.md"
repository = "https://github.com/pszymkowiak/wshm"
keywords = ["github", "ai", "triage", "automation"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

# Export sinks (cloud storage)
export-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
export-azure = ["dep:azure_storage_blobs", "dep:azure_storage"]
export-gcs = ["dep:google-cloud-storage"]

# Export sinks (databases)
export-elastic = ["dep:elasticsearch"]
export-opensearch = ["dep:opensearch"]
export-postgres = ["dep:sqlx"]
export-mongodb = ["dep:mongodb"]
export-mysql = ["dep:mysql_async"]

# Vault providers
vault-hashicorp = ["dep:vaultrs"]
vault-aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
vault-azure = ["dep:azure_security_keyvault", "dep:azure_identity"]
vault-gcp = ["dep:google-cloud-secretmanager-v1"]

# Convenience bundles
export-all = [
    "export-s3", "export-azure", "export-gcs",
    "export-elastic", "export-opensearch", "export-postgres", "export-mongodb",
    "export-mysql",
]
vault-all = ["vault-hashicorp", "vault-aws", "vault-azure", "vault-gcp"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
octocrab = "0.44"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
hf-hub = "0.4"
indicatif = "0.17"
dirs = "6.0.0"
regex = "1.12.3"
axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
flate2 = "1"
tar = "0.4"
zip = "2"
async-trait = "0.1"
is-terminal = "0.4"
zeroize = "1"

# Optional: Export - Cloud Storage
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }
azure_storage = { version = "0.21", optional = true }
google-cloud-storage = { version = "1", optional = true }

# Optional: Export - Databases
elasticsearch = { version = "9.1.0-alpha.1", optional = true }
opensearch = { version = "2", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
mongodb = { version = "3", optional = true }
mysql_async = { version = "0.36", optional = true }

# Optional: Vault
vaultrs = { version = "0.7", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }
azure_identity = { version = "0.33", optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
urlencoding = "2.1.3"
futures = "0.3.32"
ratatui = "0.29"
crossterm = "0.28"
